Flex + Alignment Issues

--- a/styles/Features.module.css
+++ b/styles/Features.module.css
@@ -41,7 +41,7 @@
 .featureContainer {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   height: 80%;
   width: 100%;
@@ -65,7 +65,7 @@
   border: 1px solid #fff;
   border-radius: 6px;
   background-color: rgba(0, 0, 0, 0.63);
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.829);
   padding: 6px;
 }
 
@@ -144,7 +144,7 @@
   border: 1px solid #fff;
   border-radius: 6px;
   background-color: rgba(0, 0, 0, 0.63);
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.829);
   padding: 6px;
 }
 
@@ -174,7 +174,7 @@
   border: 1px solid #fff;
   border-radius: 6px;
   background-color: rgba(0, 0, 0, 0.63);
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.76);
   padding: 6px;
 }
 
@@ -259,6 +259,6 @@
   border: 1px solid #fff;
   border-radius: 6px;
   background-color: rgba(0, 0, 0, 0.63);
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.829);
   padding: 6px;
 }
