--- a/styles/Roadmap.module.css
+++ b/styles/Roadmap.module.css
@@ -1,14 +1,14 @@
 .roadmapContainer {
     border: #fff 1px solid;
-    padding: 6rem;
     width: 100%;
-    height: 810px;
+    height: 1000px;
     position: relative;
     overflow-y: hidden;
     margin-bottom: 240px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .roadmapText {
@@ -23,20 +23,21 @@
     flex-direction: row;
     margin-top: 35px;
     z-index: 1;
-    bottom: 82px;
-
+    right: 784px;
+    text-align: center;
+    top: 12px;
+    justify-content: center;
 }
 
 .roadmapContainer2 {
     border: #fff 1px solid;
     width: 795px;
     position: relative;
-    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     position: relative;
-    bottom: 100px;
     border-radius: 6px;
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.459)
 }
 
 .roadmapContainer2 img {
@@ -44,10 +45,15 @@
     z-index: 1;
     object-fit: contain;
     width: 100%;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .cosmos img {
     position: relative;
     z-index: -1;
     object-fit: contain;
+    width: 2000px;
 }
