--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -1,12 +1,13 @@
 .teamContainer {
-    border: #fff 1px solid;
     width: 100%;
-    height: 700px;
+    height: 500px;
     position: relative;
     z-index: 1;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 160px;
 }
 
 .teamTitle {
@@ -19,6 +20,7 @@
     z-index: 1;
     height: 50px;
     width: 400px;
+    right: 680px;
 }
 
 .mainContainer {
@@ -30,10 +32,9 @@
     margin-bottom: 517px;
     border: #fff 1px solid;
     width: 100%;
-    height: 750px;
+    height: 840px;
     overflow-y: hidden;
     overflow-x: hidden;
-    padding: 6rem;
 }
 
 .astroDescription {
@@ -47,6 +48,7 @@
     width: 400px;
     border: #ffffff 1px solid;
     border-radius: 10px;
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322)
 }
 
 .astroDescription p {
@@ -91,16 +93,16 @@
 }
 
 .chumaDescription h3 {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 400;
     text-align: center;
     position: relative;
     font-style: oblique;
     color: #ffffff;
     z-index: 1;
-    margin-top: 30px;
+    margin-top: 492px;
     text-align: center;
     border: #ffffff 1px solid;
     border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.63);
+    background-color: rgba(0, 0, 0, 0.76);
 }
